# Jiji

./: .gitignore  Cargo.toml  README.md  jiji.project  shell.nix
.github/workflows/: release.yml
src/: app.rs  bot.rs  discord_structure.rs  emoji_window.rs  main.rs  postman.rs  state.rs  token.rs  tree.rs  ui.rs
